--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>GoSurf</title>
     <link rel="stylesheet" href="css/style.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;300;400;500;800&display=swap"
@@ -1824,14 +1824,6 @@
           </div>
         </div>
       </section>
-      <section class="sleep">
-        <div class="title">
-          <span
-            >Sleep
-            <h3>Sleep</h3>
-          </span>
-        </div>
-      </section>
       <section class="shop">
         <div class="title">
           <span
@@ -1839,7 +1831,155 @@
             <h3>Shop</h3>
           </span>
         </div>
+        <div class="shop-slider">
+          <div class="shop-slider__item">
+            <div class="shop-slider__inner">
+              <div class="shop-slider__info">
+                <div class="descr">
+                  <p class="headline-right">Style</p>
+                  <p class="descr__head">
+                    North Nugget TT <br />
+                    Surfboard
+                  </p>
+                </div>
+                <div class="shop-slider__price">
+                  <img src="img/star.svg" alt="Рейтинг" />
+                  <p class="shop-price">$ 799 <sup>99</sup></p>
+                </div>
+                <div class="shop-slider__btn">
+                  <a class="btn" href="#"> Drop <span>In</span> </a>
+                </div>
+              </div>
+              <div class="shop-slider__content">
+                <div class="surfboard">
+                  <img src="img/surfboard.png" alt="Доска для сёрфа" />
+                  <div class="surfboard__box surfboard__position--1">
+                    <div class="surfboard__circle">
+                      <div class="circle-row"></div>
+                      <div class="circle-row"></div>
+                    </div>
+                    <div class="surfboard__content">
+                      Double Concave with Vee Shape low point
+                    </div>
+                  </div>
+                  <div class="surfboard__box surfboard__position--2">
+                    <div class="surfboard__circle">
+                      <div class="circle-row"></div>
+                      <div class="circle-row"></div>
+                    </div>
+                    <div class="surfboard__content">
+                      Double Concave with Vee Shape low point
+                    </div>
+                  </div>
+                  <div class="surfboard__box surfboard__position--3">
+                    <div class="surfboard__circle">
+                      <div class="circle-row"></div>
+                      <div class="circle-row"></div>
+                    </div>
+                    <div class="surfboard__content">
+                      Double Concave with Vee Shape low point
+                    </div>
+                  </div>
+                </div>
+                <div class="shop-slider__extras shop-extras">
+                  <p class="shop-extras-title">Extras</p>
+                  <div class="shop-extras__inner">
+                    <div class="shop-extras__box">
+                      <div class="shop-extras__img">
+                        <img src="img/wax.png" alt="Воск" />
+                      </div>
+                      <p class="shop-extras__name">Sex Wax</p>
+                      <p class="shop-extras__price">$24.99</p>
+                    </div>
+                    <div class="shop-extras__box">
+                      <div class="shop-extras__img">
+                        <img src="img/bracelet.png" alt="Браслет" />
+                      </div>
+                      <p class="shop-extras__name">Pura Vida</p>
+                      <p class="shop-extras__price">$27.99</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shop-slider__item">
+            <div class="shop-slider__inner">
+              <div class="shop-slider__info">
+                <div class="descr">
+                  <p class="headline-right">Style</p>
+                  <p class="descr__head">
+                    North Nugget TT <br />
+                    Surfboard
+                  </p>
+                </div>
+                <div class="shop-slider__price">
+                  <img src="img/star.svg" alt="Рейтинг" />
+                  <p class="shop-price">$ 799 <sup>99</sup></p>
+                </div>
+                <div class="shop-slider__btn">
+                  <a class="btn" href="#"> Drop <span>In</span> </a>
+                </div>
+              </div>
+              <div class="shop-slider__content">
+                <div class="surfboard">
+                  <img src="img/surfboard.png" alt="Доска для сёрфа" />
+                  <div class="surfboard__box surfboard__position--1">
+                    <div class="surfboard__circle">
+                      <div class="circle-row"></div>
+                      <div class="circle-row"></div>
+                    </div>
+                    <div class="surfboard__content">
+                      Double Concave with Vee Shape low point
+                    </div>
+                  </div>
+                  <div class="surfboard__box surfboard__position--2">
+                    <div class="surfboard__circle">
+                      <div class="circle-row"></div>
+                      <div class="circle-row"></div>
+                    </div>
+                    <div class="surfboard__content">
+                      Double Concave with Vee Shape low point
+                    </div>
+                  </div>
+                  <div class="surfboard__box surfboard__position--3">
+                    <div class="surfboard__circle">
+                      <div class="circle-row"></div>
+                      <div class="circle-row"></div>
+                    </div>
+                    <div class="surfboard__content">
+                      Double Concave with Vee Shape low point
+                    </div>
+                  </div>
+                </div>
+                <div class="shop-slider__extras shop-extras">
+                  <p class="shop-extras-title">Extras</p>
+                  <div class="shop-extras__inner">
+                    <div class="shop-extras__box">
+                      <div class="shop-extras__img">
+                        <img src="img/wax.png" alt="Воск" />
+                      </div>
+                      <p class="shop-extras__name">Sex Wax</p>
+                      <p class="shop-extras__price">$24.99</p>
+                    </div>
+                    <div class="shop-extras__box">
+                      <div class="shop-extras__img">
+                        <img src="img/bracelet.png" alt="Браслет" />
+                      </div>
+                      <p class="shop-extras__name">Pura Vida</p>
+                      <p class="shop-extras__price">$27.99</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
+      <footer class="footer">
+        <a class="btn" href="#"> Go <span>Surf</span> </a>
+        <p class="footer__copy">© Go-Surf 2018. All Rights Reserved.</p>
+      </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
