feat: adaptive header

--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,11 @@
         </div>
         <p class="header__date">20 <span>06 | 2022</span></p>
         <p class="header__location">California</p>
+        <div class="menu-btn">
+          <button class="main-nav__toggle">
+            <span class="main-nav__menu"></span>
+          </button>
+        </div>
       </div>
       <div class="header__slider">
         <div class="header__slider-item slider-item">
@@ -245,7 +250,7 @@
         />
       </a>
     </header>
-    <div class="container">
+    <!-- <div class="container">
       <section class="surf">
         <h2 class="title">
           <span
@@ -1980,7 +1985,7 @@
         <a class="btn" href="#"> Go <span>Surf</span> </a>
         <p class="footer__copy">© Go-Surf 2018. All Rights Reserved.</p>
       </footer>
-    </div>
+    </div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
