--- a/app/index.html
+++ b/app/index.html
@@ -250,7 +250,7 @@
         />
       </a>
     </header>
-    <!-- <div class="container">
+    <div class="container">
       <section class="surf">
         <h2 class="title">
           <span
@@ -555,121 +555,137 @@
           </div>
         </div>
         <div class="surf-slider">
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-1.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Malibu Beach</div>
-              <div class="serf-box__inner-location">
-                California <span>|</span> USA
-              </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-2.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Airlie Beach</div>
-              <div class="serf-box__inner-location">
-                Queensland <span>|</span> Australia
-              </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-1.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Malibu Beach</div>
+                <div class="serf-box__inner-location">
+                  California <span>|</span> USA
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
               </div>
             </div>
           </div>
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-3.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Cloud Nine</div>
-              <div class="serf-box__inner-location">
-                Siargao <span>|</span> Philippines
-              </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-4.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Vieux Boucau</div>
-              <div class="serf-box__inner-location">
-                Hossegor <span>|</span> France
-              </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-2.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Airlie Beach</div>
+                <div class="serf-box__inner-location">
+                  Queensland <span>|</span> Australia
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
               </div>
             </div>
           </div>
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-1.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Malibu Beach</div>
-              <div class="serf-box__inner-location">
-                California <span>|</span> USA
-              </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-2.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Airlie Beach</div>
-              <div class="serf-box__inner-location">
-                Queensland <span>|</span> Australia
-              </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-3.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Cloud Nine</div>
+                <div class="serf-box__inner-location">
+                  Siargao <span>|</span> Philippines
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
               </div>
             </div>
           </div>
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-3.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Cloud Nine</div>
-              <div class="serf-box__inner-location">
-                Siargao <span>|</span> Philippines
-              </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-4.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Vieux Boucau</div>
+                <div class="serf-box__inner-location">
+                  Hossegor <span>|</span> France
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
               </div>
             </div>
           </div>
-          <div
-            class="surf-box"
-            style="background-image: url(../img/slide-4.jpg)"
-          >
-            <div class="surf-box__inner">
-              <div class="serf-box__inner-title">Vieux Boucau</div>
-              <div class="serf-box__inner-location">
-                Hossegor <span>|</span> France
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-1.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Malibu Beach</div>
+                <div class="serf-box__inner-location">
+                  California <span>|</span> USA
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
               </div>
-              <div class="surf-box__inner-btn">
-                <a class="btn" href="#">view <span>surf</span></a>
+            </div>
+          </div>
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-2.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Airlie Beach</div>
+                <div class="serf-box__inner-location">
+                  Queensland <span>|</span> Australia
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-3.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Cloud Nine</div>
+                <div class="serf-box__inner-location">
+                  Siargao <span>|</span> Philippines
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="surf-box">
+            <div
+              class="surf-box__wrapper"
+              style="background-image: url(../img/slide-4.jpg)"
+            >
+              <div class="surf-box__inner">
+                <div class="serf-box__inner-title">Vieux Boucau</div>
+                <div class="serf-box__inner-location">
+                  Hossegor <span>|</span> France
+                </div>
+                <div class="surf-box__inner-btn">
+                  <a class="btn" href="#">view <span>surf</span></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="holder">
+      <!-- <section class="holder">
         <div class="container">
           <div class="title">
             <span
@@ -1984,8 +2000,8 @@
       <footer class="footer">
         <a class="btn" href="#"> Go <span>Surf</span> </a>
         <p class="footer__copy">© Go-Surf 2018. All Rights Reserved.</p>
-      </footer>
-    </div> -->
+      </footer> -->
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
