feat: adaptive sleep block

--- a/app/index.html
+++ b/app/index.html
@@ -685,7 +685,7 @@
           </div>
         </div>
       </section>
-      <!-- <section class="holder">
+      <section class="holder">
         <div class="container">
           <div class="title">
             <span
@@ -1873,7 +1873,12 @@
               </div>
               <div class="shop-slider__content">
                 <div class="surfboard">
-                  <img src="img/surfboard.png" alt="Доска для сёрфа" />
+                  <img
+                    src="img/surfboard.png"
+                    width="228"
+                    height="695"
+                    alt="Доска для сёрфа"
+                  />
                   <div class="surfboard__box surfboard__position--1">
                     <div class="surfboard__circle">
                       <div class="circle-row"></div>
@@ -1999,8 +2004,8 @@
       </section>
       <footer class="footer">
         <a class="btn" href="#"> Go <span>Surf</span> </a>
-        <p class="footer__copy">© Go-Surf 2018. All Rights Reserved.</p>
-      </footer> -->
+        <p class="footer__copy">© Go-Surf 2022. All Rights Reserved.</p>
+      </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
