feat: change bgi

--- a/source/index.html
+++ b/source/index.html
@@ -556,10 +556,7 @@
         </div>
         <div class="surf-slider">
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-1.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--1">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Malibu Beach</div>
                 <div class="serf-box__inner-location">
@@ -572,10 +569,7 @@
             </div>
           </div>
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-2.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--2">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Airlie Beach</div>
                 <div class="serf-box__inner-location">
@@ -588,10 +582,7 @@
             </div>
           </div>
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-3.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--3">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Cloud Nine</div>
                 <div class="serf-box__inner-location">
@@ -604,10 +595,7 @@
             </div>
           </div>
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-4.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--4">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Vieux Boucau</div>
                 <div class="serf-box__inner-location">
@@ -620,10 +608,7 @@
             </div>
           </div>
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-1.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--5">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Malibu Beach</div>
                 <div class="serf-box__inner-location">
@@ -636,10 +621,7 @@
             </div>
           </div>
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-2.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--6">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Airlie Beach</div>
                 <div class="serf-box__inner-location">
@@ -652,10 +634,7 @@
             </div>
           </div>
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-3.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--7">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Cloud Nine</div>
                 <div class="serf-box__inner-location">
@@ -668,10 +647,7 @@
             </div>
           </div>
           <div class="surf-box">
-            <div
-              class="surf-box__wrapper"
-              style="background-image: url(../img/slide-4.jpg)"
-            >
+            <div class="surf-box__wrapper surf-box--8">
               <div class="surf-box__inner">
                 <div class="serf-box__inner-title">Vieux Boucau</div>
                 <div class="serf-box__inner-location">
