--- a/source/index.html
+++ b/source/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="GoSurf Project by Stanislav Kazankov" />
     <title>GoSurf</title>
     <link rel="stylesheet" href="css/style.min.css" />
     <link rel="stylesheet" href="css/animate.css" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="img/favicon/apple.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;300;400;500;800&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      href="fonts/FiraSans/FiraSans-Regular.woff2"
+      type="font/woff2"
+      as="font"
     />
   </head>
   <body>
